# dots

./: .bashrc  .dircolors  .dockerignore  .gitconfig  .gitignore  .gitmodules  .tmux.conf  .trkrc  .vimjs  .vimphp  .vimpy  .vimrc  Dockerfile  Pipfile  README.md  Xdark  Xdefaults  Xfont  Xlight  alacritty-dark.yml  alacritty-light.yml  alacritty.yml  bashcolors.sh.example  bashrc  brew-list  colordiffrc  colors.py  colors.yml  conkyrc  dev  disks.sh  exarc  ezarc  fix-groups.sh  flake8  gitconfig  gitpager.sh  gtk-bookmarks  hosts  install.sh  (+28 more)
.vim/: .netrwhist
.vim/ftdetect/: arduino.vim
.vim/syntax/: css.vim  markdown.vim  mygit.vim  todo.vim
alacritty/: dark.yml  light.yml
bash/: alias  colors.ex  env  prompt  rc
docker/: build.sh  entry.sh  fix-groups.sh  run.sh
nvim/: color.vim  fold.vim  init.lua  init.vim  map.vim
nvim/ftdetect/: junk.vim  note.vim  rating.vim  review.vim  shroom.vim  todo.vim
nvim/indent/: junk.vim  shroom.vim  vdf.vim
nvim/lua/: color.lua  fold.lua  map.lua
nvim/syntax/: junk.vim  lua.vim  note.vim  rating.vim  review.vim  shroom.vim  todo.vim
prompts/: default.sh  hex.sh  treat.sh  trick.sh
vim/: .netrwhist  autocmd.vim  color.vim  core.vim  fold.vim  map.vim  pager.vim  plugins.vim
vim/doc/: multiwin.txt  (+1 more)
zsh/: aliases.zsh  docker.zsh  path.zsh  prompt.zsh  tmux.zsh  venv.zsh  zsh.zsh
zsh.d/: 02-completion.zsh  03-path.zsh  10-env.zsh  20-core.zsh  30-fuck.zsh  30-network.zsh  40-path.zsh  50-prompt.zsh  60-aliases.zsh  60-syntax.zsh  70-tmux.zsh  91-autosuggestions.zsh  92-autoquote.zsh  99-syntax-highlighting.zsh
(+532 files in other folders)
