[tool.poetry]
name = "dots"
version = "0.1.0"
description = "Dotfiles"
authors = ["John Weachock <jweachock@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pillow = "^7.2.0"
click = "^7.1.2"
pyyaml = "^5.3.1"
ipython = "^7.18.1"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
